fix(popup): scroll bug on ie

--- a/app/blocks/popup/popup.styl
+++ b/app/blocks/popup/popup.styl
@@ -22,6 +22,7 @@
 		padding-x: 30px
 		padding-bottom: 30px
 		width: 700px
+		height: 80%
 		max-height: 80vh
 		display: flex
 		flex-direction: column
